fix text font rendering issues on safari

--- a/components/arrowDown.module.css
+++ b/components/arrowDown.module.css
@@ -3,9 +3,6 @@
   text-align: center;
   margin-top: 5rem;
   color: var(--light-text, #D5DCF4);
-  /* leading-trim: both;
-  text-edge: cap; */
-  font-family: SF Pro Text;
   font-size: 3rem;
   font-style: normal;
   font-weight: 150;
