--- a/styles/global.css
+++ b/styles/global.css
@@ -2,12 +2,8 @@
 
 html,
 body {
-  /* background-image: url('/images/background.jpg');
-  background-size: cover;
-  padding: 0; */
   margin: 0;
-  font-family: 'SF Pro Text', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: SF Pro Rounded, sans-serif, -apple-system, sans-serif;
 }
 
 :root {
